--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -3,6 +3,7 @@
         <ul>
             <li><a routerLink="/">Home</a></li>
             <li><a routerLink="/product">Products</a></li>
+            <li><a routerLink="/product-add">Product-Add</a></li>
         </ul>
     </header>
     <main>
